src/parser/snapshots/rbx_rsml__parser__tests__annotated_table_missing_close.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            AnnotatedTable {
                annotation: Node {
                    token: SpannedToken(
                        7,
                        Identifier(
                            "udim2",
                        ),
                        12,
                    ),
                    leading_trivia: None,
                },
                body: Some(
                    Delimited {
                        left: Node {
                            token: SpannedToken(
                                12,
                                ParensOpen,
                                13,
                            ),
                            leading_trivia: None,
                        },
                        content: Some(
                            [
                                Node {
                                    node: Node {
                                        token: SpannedToken(
                                            13,
                                            Number(
                                                "1",
                                            ),
                                            14,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                                Node {
                                    node: Node {
                                        token: SpannedToken(
                                            14,
                                            Comma,
                                            15,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                                Node {
                                    node: Node {
                                        token: SpannedToken(
                                            16,
                                            Number(
                                                "0",
                                            ),
                                            17,
                                        ),
                                        leading_trivia: None,
                                    },
                                },
                            ],
                        ),
                        right: None,
                    },
                ),
            },
        ),
        terminator: None,
    },
]
