src/parser/snapshots/rbx_rsml__parser__tests__assign_property_boolean.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Visible",
                ),
                7,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    8,
                    Equals,
                    9,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        10,
                        Boolean(
                            "true",
                        ),
                        14,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    14,
                    SemiColon,
                    15,
                ),
                leading_trivia: None,
            },
        ),
    },
]
