src/parser/snapshots/rbx_rsml__parser__tests__assign_property_missing_value.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Text",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: None,
        terminator: Some(
            Node {
                token: SpannedToken(
                    7,
                    SemiColon,
                    8,
                ),
                leading_trivia: None,
            },
        ),
    },
]
