src/parser/snapshots/rbx_rsml__parser__tests__assign_property_nil.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Parent",
                ),
                6,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    7,
                    Equals,
                    8,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        9,
                        Nil,
                        12,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    12,
                    SemiColon,
                    13,
                ),
                leading_trivia: None,
            },
        ),
    },
]
