src/parser/snapshots/rbx_rsml__parser__tests__assign_property_number.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Size",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        7,
                        Number(
                            "42",
                        ),
                        9,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    9,
                    SemiColon,
                    10,
                ),
                leading_trivia: None,
            },
        ),
    },
]
